--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas
-streamlit
-trading212-api
-requests
-plotly
-pytz
+pandas==1.1.5
+streamlit==1.10.0
+trading212-api==0.1
+requests==2.27.1
+plotly==5.18.0
+pytz==2024.2
