Fix Dockerfile path and update workflow

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,13 @@ WORKDIR /app
 
 COPY requirements.txt dashboard.py ./
 
-RUN pip install --no-cache-dir -r requirements.txt
+# Install dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    && pip install --no-cache-dir -r requirements.txt \
+    && apt-get remove -y build-essential \
+    && apt-get autoremove -y \
+    && rm -rf /var/lib/apt/lists/*
 
 EXPOSE 8501
 
